feat(update-user): update profile endpoints
